--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-custom-header": "^1.0.0",
+    "react-native-dark-mode": "^0.2.2",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-modal": "^11.7.0",
