--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.vidkar">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
       android:usesCleartextTraffic="true"
@@ -22,5 +24,11 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+       <meta-data android:name="com.supersami.foregroundservice.notification_channel_name" 	android:value="SuperService"/> 
+  <meta-data  android:name="com.supersami.foregroundservice.notification_channel_description" android:value="SuperService is running"/> 
+  <meta-data  android:name="com.supersami.foregroundservice.notification_color"      android:resource="@color/orange"/> 
+  
+  <service android:name="com.supersami.foregroundservice.ForegroundService"></service> 
+  <service android:name="com.supersami.foregroundservice.ForegroundServiceTask"></service>
     </application>
 </manifest>
