--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.2",
+    "@supersami/rn-foreground-service": "^1.1.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "react": "17.0.1",
