--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@supersami/rn-foreground-service": "^1.1.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
     "react-native-dark-mode": "^0.2.2",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-modal": "^11.7.0",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.0",
