mejoras en la apk con los registros

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
     "react-native-dark-mode": "^0.2.2",
+    "react-native-element-dropdown": "^1.5.5",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-modal": "^11.7.0",
