--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.2",
     "@supersami/rn-foreground-service": "^1.1.1",
@@ -25,20 +24,11 @@
     "react-native": "0.64.0",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
-    "react-native-dark-mode": "^0.2.2",
     "react-native-element-dropdown": "^1.5.5",
-    "react-native-elements": "^2.2.1",
-    "react-native-gesture-handler": "^1.7.0",
     "react-native-modal": "^11.7.0",
-    "react-native-numeric-input": "^1.9.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
-    "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.6",
-    "react-native-screens": "^2.10.1",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-video": "^5.1.1"
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
