--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native-modal": "^11.7.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-safe-area-context": "^3.1.6",
+    "react-native-screens": "^2.10.1",
+    "react-native-gesture-handler": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
