--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "react-native": "0.64.0",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
+    "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.5.5",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-modal": "^11.7.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
-    "react-native-vector-icons": "^8.1.0",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
-    "react-native-gesture-handler": "^1.7.0"
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
