--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "17.0.1",
-    "react-chat-elements": "^10.16.0",
     "react-native": "0.64.0",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.5.5",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-modal": "^11.7.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
