--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supersami/rn-foreground-service": "^1.1.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "dateformat": "^5.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
