--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@supersami/rn-foreground-service": "^1.1.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "dateformat": "^5.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -34,7 +33,8 @@
     "react-native-paper": "^4.7.2",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
