--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-element-dropdown": "^1.5.5",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-ip-sec-vpn": "^1.1.1",
     "react-native-modal": "^11.7.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
