--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
     "@supersami/rn-foreground-service": "^1.1.1",
     "assert": "^2.0.0",
@@ -31,10 +32,16 @@
     "react-native-modal": "^11.7.0",
     "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
-    "react-native-safe-area-context": "^3.1.6",
-    "react-native-screens": "^2.10.1",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^2.18.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-subtitles": "^5.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-video": "^5.2.0"
+    "react-native-video": "^5.2.0",
+    "react-native-video-controls-subtitle": "^1.0.0",
+    "react-native-video-player": "^0.12.0",
+    "react-subtitles": "^0.1.3",
+    "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
