--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-video-controls-subtitle": "^1.0.0",
     "react-native-video-player": "^0.12.0",
     "react-subtitles": "^0.1.3",
+    "request": "^2.88.2",
     "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
