--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-video-player": "^0.12.0",
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
+    "rive-react-native": "^3.0.41",
     "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
