cambios que funcionaron

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,6 +129,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+        pickFirst '**/libfbjni.so'
+    }
 
     defaultConfig {
         applicationId "com.vidkar"
