--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vidkar",
+  "name": "Pruebas",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
     "@meteorrn/core": "^2.1.0",
@@ -21,8 +21,8 @@
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
-    "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react": "18.3.1",
+    "react-native": "0.75.3",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
@@ -36,27 +36,33 @@
     "react-native-screens": "^2.18.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-subtitles": "^5.0.0",
-    "react-native-vector-icons": "^10.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^5.2.0",
     "react-native-video-controls-subtitle": "^1.0.0",
     "react-native-video-player": "^0.12.0",
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
-    "rive-react-native": "^3.0.41",
     "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "eslint-plugin-react": "^7.21.2",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.3",
+    "@react-native/eslint-config": "0.75.3",
+    "@react-native/metro-config": "0.75.3",
+    "@react-native/typescript-config": "0.75.3",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4"
 }
