--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.vidkar">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"/>
 
     <application
       android:usesCleartextTraffic="true"
@@ -15,6 +17,7 @@
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
+        android:exported="true"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
         android:launchMode="singleTask"
@@ -26,20 +29,20 @@
       </activity>
 
     <meta-data
-      android:name="com.supersami.foregroundservice.notification_channel_name"
-      android:value="Sticky Title"
-    />
-    <meta-data
-      android:name="com.supersami.foregroundservice.notification_channel_description"
-      android:value="Sticky Description."
-    />
-    <meta-data
-      android:name="com.supersami.foregroundservice.notification_color"
-      android:resource="@color/blue"
-    />
-
-      <service android:name="com.supersami.foregroundservice.ForegroundService"></service>
-      <service android:name="com.supersami.foregroundservice.ForegroundServiceTask"></service>
+    android:name="com.supersami.foregroundservice.notification_channel_name"
+    android:value="Sticky Title"
+  />
+  <meta-data
+    android:name="com.supersami.foregroundservice.notification_channel_description"
+    android:value="Sticky Description."
+  />
+  <meta-data
+    android:name="com.supersami.foregroundservice.notification_color"
+    android:resource="@color/blue"
+  />
+ 
+  <service android:name="com.supersami.foregroundservice.ForegroundService" android:foregroundServiceType="mediaPlayback"></service> // also define android:foregroundServiceType="" according to your use case
+  <service android:name="com.supersami.foregroundservice.ForegroundServiceTask" android:foregroundServiceType="mediaPlayback"></service> // also define android:foregroundServiceType="" according to your use case
 
     </application>
 </manifest>
