--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pruebas",
+  "name": "Vidkar",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
-    "@supersami/rn-foreground-service": "^1.1.1",
+    "@supersami/rn-foreground-service": "^2.2.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
@@ -30,14 +30,13 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-modal": "^11.7.0",
-    "react-native-orientation": "^3.1.3",
     "react-native-paper": "^4.7.2",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^2.18.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-subtitles": "^5.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^5.2.0",
+    "react-native-video": "^6.6.2",
     "react-native-video-controls-subtitle": "^1.0.0",
     "react-native-video-player": "^0.12.0",
     "react-subtitles": "^0.1.3",
@@ -48,6 +47,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli-platform-android": "^14.1.1",
     "@react-native/babel-preset": "0.75.3",
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
