Actualizar versiones en build.gradle y corregir lógica de guardado en DialogVenta.js

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+ 
+ <uses-permission android:name="android.permission.RECORD_AUDIO" />
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
 
     <application
       android:usesCleartextTraffic="true"
@@ -39,8 +46,8 @@
     android:resource="@color/blue"
   />
  
-  <service android:name="com.supersami.foregroundservice.ForegroundService" android:foregroundServiceType="mediaPlayback"></service> // also define android:foregroundServiceType="" according to your use case
-  <service android:name="com.supersami.foregroundservice.ForegroundServiceTask" android:foregroundServiceType="mediaPlayback"></service> // also define android:foregroundServiceType="" according to your use case
+  <service android:name="com.supersami.foregroundservice.ForegroundService" android:foregroundServiceType="microphone"></service> // also define android:foregroundServiceType="" according to your use case
+  <service android:name="com.supersami.foregroundservice.ForegroundServiceTask" android:foregroundServiceType="microphone"></service> // also define android:foregroundServiceType="" according to your use case
 
     </application>
 </manifest>
