--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "moment": "^2.29.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-audio-recorder-player": "^3.6.11",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.5.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-modal": "^11.7.0",
