--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
-    "@supersami/rn-foreground-service": "^2.2.0",
+    "@supersami/rn-foreground-service": "^2.2.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
@@ -33,6 +33,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^2.18.1",
     "react-native-snap-carousel": "^3.9.1",
