--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,8 @@ android {
         applicationId "com.vidkar"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-
+        versionCode 21
+        versionName "21"
     }
     signingConfigs {
         debug {
