--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
@@ -30,6 +31,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^4.1.5",
