--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,15 +82,15 @@ android {
         applicationId "com.vidkar"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 27
-        versionName "1.27"
+        versionCode 28
+        versionName "1.28"
                 // Otros valores predeterminados de configuración
-        resValue "bool", "useExoplayerIMA", "false"
-        resValue "bool", "useExoplayerSmoothStreaming", "false"
-        resValue "bool", "useExoplayerDash", "false"
-        resValue "bool", "useExoplayerHls", "false"
-        resValue "bool", "useExoplayerRtsp", "false"
-        resValue "bool", "buildFromSource", "false"
+        resValue "bool", "useExoplayerIMA", "true"
+        resValue "bool", "useExoplayerSmoothStreaming", "true"
+        resValue "bool", "useExoplayerDash", "true"
+        resValue "bool", "useExoplayerHls", "true"
+        resValue "bool", "useExoplayerRtsp", "true"
+        resValue "bool", "buildFromSource", "true"
     }
     signingConfigs {
         debug {
