--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.5.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-gifted-chat": "^0.16.3",
@@ -41,6 +42,7 @@
     "react-native-subtitles": "^5.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.1.2",
+    "react-native-vlc-media-player": "^1.0.70",
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
     "srt-parser-2": "^1.1.7"
