--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.5.5",
@@ -40,6 +41,7 @@
     "react-native-screens": "^2.18.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-subtitles": "^5.0.0",
+    "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.1.2",
     "react-native-vlc-media-player": "^1.0.70",
