--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
@@ -44,9 +45,11 @@
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.1.2",
-    "react-native-vlc-media-player": "^1.0.70",
+    "react-native-vlc-media-player": "^1.0.78",
+    "react-native-webrtc": "^124.0.5",
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
+    "socket.io-client": "^4.8.1",
     "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
