--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "github.copilot.chat.localeOverride": "es",
+    "github.copilot.chat.scopeSelection": true,
+    "githubIssues.ignoreMilestones": [
+        
+    ]
 }
