--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,17 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+
+        <!-- Deep Link (Enlaces externos) -->
+    <intent-filter android:autoVerify="true">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="https" android:host="ht7cpzhf-3000.brs.devtunnels.ms" />
+        <!-- Si se quisiera cubrir http también: -->
+        <data android:scheme="http" android:host="ht7cpzhf-3000.brs.devtunnels.ms" />
+        <data android:scheme="vidkar" />
+    </intent-filter>
       </activity>
 
     <meta-data
