--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-progress-steps": "^2.0.3",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^2.18.1",
     "react-native-snap-carousel": "^3.9.1",
