--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "windows": "npx @react-native-community/cli run-windows"
   },
   "dependencies": {
     "@meteorrn/core": "^2.1.0",
@@ -47,6 +48,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.1.2",
     "react-native-vlc-media-player": "^1.0.78",
+    "react-native-windows": "^0.79.3",
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
     "socket.io-client": "^4.8.1",
@@ -66,6 +68,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.80.12",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
@@ -73,5 +76,12 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "react-native-windows": {
+    "init-windows": {
+      "name": "Vidkar",
+      "namespace": "Vidkar",
+      "template": "old/uwp-cpp-app"
+    }
+  }
 }
