--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,7 +23,7 @@ workflows:
           cd android
           chmod +x gradlew
           ./gradlew bundleRelease \
-            -Pandroid.injected.signing.store.file=app/my-release-key.jks \
+            -Pandroid.injected.signing.store.file=my-release-key.jks \
             -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
             -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
             -Pandroid.injected.signing.key.password=$KEY_PASSWORD
@@ -32,7 +32,7 @@ workflows:
         script: |
           cd android
           ./gradlew assembleRelease \
-            -Pandroid.injected.signing.store.file=app/my-release-key.jks \
+            -Pandroid.injected.signing.store.file=my-release-key.jks \
             -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
             -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
             -Pandroid.injected.signing.key.password=$KEY_PASSWORD
