--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,8 +16,8 @@ workflows:
 
       - name: Decode keystore
         script: |
-          mkdir -p /Users/builder/.gradle/daemon/8.8
-          echo "$KEYSTORE_BASE64" | base64 --decode > /Users/builder/.gradle/daemon/8.8/my-release-key.jks
+          mkdir -p android
+          echo "$KEYSTORE_BASE64" | base64 --decode > android/my-release-key.jks
 
       - name: Build Android App Bundle (AAB)
         script: |
