--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "github.copilot.chat.scopeSelection": true,
     "githubIssues.ignoreMilestones": [
         
-    ]
+    ],
+    "yaml.schemaStore.enable": true
 }
