--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,13 +96,13 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks")
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: 'android'
+            keyAlias System.getenv("KEY_ALIAS") ?: 'androiddebugkey'
+            keyPassword System.getenv("KEY_PASSWORD") ?: 'android'
         }
         release {
-            storeFile file(System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks")
+            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
             keyAlias System.getenv("KEY_ALIAS") ?: ""
             keyPassword System.getenv("KEY_PASSWORD") ?: ""
