--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,26 @@ def enableProguardInReleaseBuilds = false
  * this variant is about 6MiB larger per architecture than default.
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
+def keystorePath = System.getenv("KEYSTORE_PATH") ?: "android/app/my-release-key.jks"
+
+println "=== [DEBUG] Variables de entorno de firma ==="
+println "KEYSTORE_PATH: ${keystorePath}"
+println "KEY_ALIAS: ${System.getenv('KEY_ALIAS')}"
+println "KEYSTORE_PASSWORD: ${System.getenv('KEYSTORE_PASSWORD') ? '***' : '(vacío)'}"
+println "KEY_PASSWORD: ${System.getenv('KEY_PASSWORD') ? '***' : '(vacío)'}"
+
+println "=== [DEBUG] Contenido del directorio android/ ==="
+file("android").listFiles()?.each { f ->
+    println (f.isDirectory() ? "[DIR] " : "[FILE] ") + f.name
+}
+
+def ksFile = file(keystorePath)
+if (ksFile.exists()) {
+    println "✅ El keystore existe en: ${ksFile.absolutePath}"
+    println "Tamaño del keystore: ${ksFile.length()} bytes"
+} else {
+    println "❌ No se encontró el keystore en: ${ksFile.absolutePath}"
+}
 
 android {
     ndkVersion rootProject.ext.ndkVersion
@@ -96,13 +116,13 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks")
+            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "my-release-key.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: 'android'
             keyAlias System.getenv("KEY_ALIAS") ?: 'androiddebugkey'
             keyPassword System.getenv("KEY_PASSWORD") ?: 'android'
         }
         release {
-            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks")
+            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "my-release-key.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
             keyAlias System.getenv("KEY_ALIAS") ?: ""
             keyPassword System.getenv("KEY_PASSWORD") ?: ""
