--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
       - name: Decode keystore
         script: |
           mkdir -p android
-          echo "$KEYSTORE_BASE64" | base64 --decode > android/my-release-key.jks
+          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/my-release-key.jks
 
       - name: Build Android App Bundle (AAB)
         script: |
