--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ def enableProguardInReleaseBuilds = false
  * this variant is about 6MiB larger per architecture than default.
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
-def keystorePath = System.getenv("KEYSTORE_PATH") ?: "android/my-release-key.jks"
+def keystorePath = System.getenv("KEYSTORE_PATH") ?: "my-release-key.jks"
 
 println "=== [DEBUG] Variables de entorno de firma ==="
 println "KEYSTORE_PATH: ${keystorePath}"
