--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,13 +116,13 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "my-release-key.jks")
+            storeFile ksFile
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: 'android'
             keyAlias System.getenv("KEY_ALIAS") ?: 'androiddebugkey'
             keyPassword System.getenv("KEY_PASSWORD") ?: 'android'
         }
         release {
-            storeFile rootProject.file(System.getenv("KEYSTORE_PATH") ?: "my-release-key.jks")
+            storeFile ksFile
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
             keyAlias System.getenv("KEY_ALIAS") ?: ""
             keyPassword System.getenv("KEY_PASSWORD") ?: ""
