agrego de cache

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,6 +9,15 @@ workflows:
         NODE_VERSION: 18
       java: 17
 
+    cache:
+      cache_paths:
+        - $HOME/.gradle/caches
+        - $HOME/.gradle/wrapper
+        - node_modules
+        - android/.gradle
+        - android/app/build
+        - ~/.npm
+        
     scripts:
       - name: Install dependencies
         script: |
