--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,11 +17,11 @@ workflows:
         - android/.gradle
         - android/app/build
         - ~/.npm
-        
+
     scripts:
       - name: Install dependencies
         script: |
-          npm install -f
+          npm install --prefer-offline -f
 
       - name: Decode keystore
         script: |
