agregado soporte para la firma de Android en el flujo de trabajo de Codemagic

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,6 +9,8 @@ workflows:
           include: true
           source: true
     environment:
+      android_signing:
+        - keystore_reference
       groups:
         - google_credentials
         - vidkar
