--- a/ios/Vidkar/Info.plist
+++ b/ios/Vidkar/Info.plist
@@ -65,10 +65,7 @@
 		<string>Fontisto.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>processing</string>
-		<string>fetch</string>
-	</array>
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
