actualizado el archivo codemagic.yaml con nuevos valores de configuración para el espacio de trabajo, esquema y ID de la aplicación, además de modificar los destinatarios de notificaciones y grupos de beta testers

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -159,9 +159,9 @@ workflows:
         distribution_type: app_store
         bundle_identifier: io.codemagic.sample.reactnative
       vars:
-        XCODE_WORKSPACE: "CodemagicSample.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "CodemagicSample" # <-- Put the name of your Xcode scheme here
-        APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
+        XCODE_WORKSPACE: "Vidkar.xcworkspace" # <-- Put the name of your Xcode workspace here
+        XCODE_SCHEME: "Vidkar" # <-- Put the name of your Xcode scheme here
+        APP_ID: 6751348594 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
       node: v19.7.0
       xcode: latest
       cocoapods: default
@@ -194,8 +194,7 @@ workflows:
     publishing:
       email:
         recipients:
-          - user_1@example.com
-          - user_2@example.com
+          - carlosmbinf@example.com
         notify:
           success: true
           failure: false
@@ -206,8 +205,7 @@ workflows:
         # Note: This action is performed during post-processing.
         submit_to_testflight: true
         beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
+          - group carlitoPruebas
 
         # Configuration related to App Store (optional)
         # Note: This action is performed during post-processing.
