--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -157,7 +157,7 @@ workflows:
     environment:
       ios_signing:
         distribution_type: app_store
-        bundle_identifier: io.codemagic.sample.reactnative
+        bundle_identifier: com.vidkar
       vars:
         XCODE_WORKSPACE: "Vidkar.xcworkspace" # <-- Put the name of your Xcode workspace here
         XCODE_SCHEME: "Vidkar" # <-- Put the name of your Xcode scheme here
